outputs/ip_deit32_es_35086361.out
  File "/home/pkadukar/furi-hsi/jobs/run_deit_t32s16_weighted_es.py", line 138
    ")
    ^
SyntaxError: unterminated string literal (detected at line 138)
